Fix contenteditable on Safari, kindof

--- a/packages/perspective-viewer/src/less/expression_editor.less
+++ b/packages/perspective-viewer/src/less/expression_editor.less
@@ -12,6 +12,12 @@
 :host {
     width: 100%;
 
+    // https://stackoverflow.com/questions/20435166/contenteditable-not-working-in-safari-but-works-in-chrome
+    [contenteditable] {
+        -webkit-user-select: text;
+        user-select: text;
+    }
+
     .perspective-expression-editor__edit_area {
         @default-text-color: var(--color, #666666);
 
